src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brief intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual counselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group counselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social and/or occupational reintegration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genera Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interagency meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_description__c</fullName>
        <formula>Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care plan step description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_text__c</fullName>
        <description>Use a workflow rule to populate this</description>
        <label>Care plan step text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_focus_of_session__c</fullName>
        <label>Main focus of session</label>
        <picklist>
            <picklistValues>
                <fullName>Drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money/Budgeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Responsible_for_Step__c</fullName>
        <label>Person Responsible for Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <picklist>
            <picklistValues>
                <fullName>Drug Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aftercare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stabisation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Attendance_ID__c</fullName>
        <inlineHelpText>The ID of the related attendance</inlineHelpText>
        <label>Related Attendance ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Attendance_Name__c</fullName>
        <inlineHelpText>This is the name of the attendance</inlineHelpText>
        <label>Related Attendance Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Attendance__c</fullName>
        <formula>if (isblank(Related_Attendance_ID__c), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp; Related_Attendance_ID__c ,  Related_Attendance_Name__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the attendance related to this event</inlineHelpText>
        <label>Related Attendance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Organisation__c</fullName>
        <label>Related Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled with notice and reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>